--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,19 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  background-color:'blue';  
+}
+.login {
+  margin: auto;
+  width:400px;
+  margin-top: 50px;
+}
+.login-form {
+  max-width: 400px;
+}
+ .login-form-forgot {
+  float: right;
+}
+ .login-form-button {
+  width: 100%;
 }
